--- a/css/stylecurso.css
+++ b/css/stylecurso.css
@@ -88,6 +88,11 @@ box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.25);
 .twoblock {
 margin-left: 50px;
          }
+
+.twoblock2 {
+margin-bottom: 100px;
+margin-left: 50px;
+           }
                 
 .text {
 margin-top: 25px;
