--- a/css/stylecurso.css
+++ b/css/stylecurso.css
@@ -222,6 +222,10 @@ width: 500px;
 margin-left: 0;
 }
 
+.twoblock2{
+margin-left: 0;
+}
+
 h2 {
 margin-top: 20px;
 text-align: center;
@@ -330,6 +334,10 @@ footer {
             }
 
         .twoblock {
+        margin-left: 0;
+        }
+
+        .twoblock2 {
         margin-left: 0;
         }
 
